applications/media-experimental/base/storyteller/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: storyteller
  labels:
    app: storyteller
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8001
      targetPort: http
      protocol: TCP
  selector:
    app: storyteller
