applications/media-experimental/base/storyteller/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: storyteller
  labels:
    app: storyteller
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/instance: "main"
    gethomepage.dev/name: "Storyteller"
    gethomepage.dev/description: "Synced Narration (ebook+audio)"
    gethomepage.dev/group: "Audiobooks"
    gethomepage.dev/weight: "13"
    gethomepage.dev/icon: "book.png"
    gethomepage.dev/href: "http://storyteller.${CLUSTER_DOMAIN}"
    gethomepage.dev/siteMonitor: "http://storyteller.media-experimental.svc.cluster.local:8001"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`storyteller.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: storyteller
          port: 8001
